--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -7,16 +7,16 @@
         </div>
         <form id="invite_user_form" class="form-horizontal">{{ csrf_input }}
             <div class="modal-body">
-                <div class="control-group">
+                <div class="form-group row">
                     <div id="invite-result"></div>
-                    <label class="control-label" for="invitee_emails">{{ _('Emails (one on each line or comma-separated)') }}</label>
+                    <label class="col-sm-5 col-form-label" for="invitee_emails">{{ _('Emails (one on each line or comma-separated)') }}</label>
                     <div class="controls">
                         <textarea rows="2" id="invitee_emails" name="invitee_emails" placeholder="{{ _('One or more email addresses...') }}"></textarea>
                     </div>
                 </div>
                 {% if is_admin %}
-                <div class="control-group">
-                    <label class="control-label" for="invite_as">{{ _('User(s) join as') }}</label>
+                <div class="form-group row">
+                    <label class="col-sm-5 col-form-label" for="invite_as">{{ _('User(s) join as') }}</label>
                     <div class="controls">
                         <select id="invite_as">
                             <option name="invite_as" value="{{ invite_as.MEMBER }}">{{ _('Members') }}</option>
@@ -30,8 +30,8 @@
                 {% if development_environment %}
                 <div class="alert" id="dev_env_msg"></div>
                 {% endif %}
-                <div class="control-group">
-                    <label class="control-label">{{ _('Streams they should join') }}</label>
+                <div class="form-group row">
+                    <label class="col-sm-5 col-form-label">{{ _('Streams they should join') }}</label>
                     <div class="controls" id="streams_to_add"></div>
                 </div>
             </div>
