message_edit: Fix message edit history breakdown on large messages.
This adds new CSS class in static/styles/zulip.scss
message_edit_history_content used by
static/templates/message_edit_history.handlebars. New class is used to
remove max-height of CSS class message_edit_content causing the issue.

Fixes: #5629.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1347,6 +1347,10 @@ div.focused_table {
     max-height: 24em;
 }
 
+.message_edit_history_content {
+    max-height: none;
+}
+
 .message_edit_countdown_timer {
     text-align: right;
     display: inline;
