left sidebar: Add a bit of margin below stream list.
Having a tiny bit of margin below the stream list
makes it possible to see the bottom of the scrollbar.

It also makes it so that the scrollbar activates
for a tiny range of list sizes where before the
last element would have been right up against the
bottom of the page, but we wouldn't scroll.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -47,9 +47,14 @@
 #stream_filters {
     overflow: visible;
     /* The -1px here prevents the scrollbar from going above the top of the container */
-    margin: -1px 0px 22px 0px;
+    margin-top: -1px;
+    margin-bottom: 18px;
     padding: 0;
     font-weight: normal;
+}
+
+.bottom_sidebar {
+    margin-bottom: 4px;
 }
 
 .left-sidebar li {
