--- a/static/templates/sidebar_private_message_list.handlebars
+++ b/static/templates/sidebar_private_message_list.handlebars
@@ -8,9 +8,7 @@
             <div class="private_message_count {{#if is_zero}}zero_count{{/if}}">
                 <div class="value">{{unread}}</div>
             </div>
-        </span>
-        <span class="arrow topic-sidebar-arrow">
-            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            <span class="ws_right"></span>
         </span>
     </li>
     {{/each}}
