--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -2,6 +2,7 @@
     <form class="form-horizontal admin-realm-form org-settings-form">
         <div class="alert" id="admin-realm-notifications-stream-status"></div>
         <div class="alert" id="admin-realm-signup-notifications-stream-status"></div>
+        <div class="alert" id="reset-passwords-status"></div>
 
         <div id="org-msg-editing" class="org-subsection-parent">
             <div class="subsection-header">
@@ -226,5 +227,14 @@
                 {{/if}}
             </div>
         </div>
+
+        <div class="reset-passwords-section">
+            <h3 class="light">Reset all passwords</h3>
+            <button class="button rounded btn-danger" id="reset_passwords_button">
+                {{t 'Reset passwords' }}
+            </button>
+            {{partial "reset-passwords-modal"}}
+        </div>
+
     </form>
 </div>
