--- a/templates/zerver/documentation_main.html
+++ b/templates/zerver/documentation_main.html
@@ -3,7 +3,7 @@
 {# Zulip User and API Documentation. #}
 
 {% block portico_content %}
-<div class="app help terms-page inline-block">
+<div class="app help terms-page inline-block{% if page_is_help_center %} help-center{% endif %}{% if page_is_api_center %} api-center{% endif %}">
     <div class="{{ sidebar_class }}">
         <div class="content">
             <h1><a href="{{ doc_root }}" class="no-underline">Home</a></h1>
