--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -1686,14 +1686,16 @@ input.new-organization-button {
 .markdown h2,
 .why-page h2 {
     font-size: 1.5em;
-    margin: 5px 0 0 0;
+    line-height: 1.25;
+    margin: 20px 0px 5px 0px;
 }
 
 .markdown h3,
 .why-page h3 {
-    font-size: 1.1em;
+    font-size: 1.25em;
+    line-height: 1.25;
     opacity: 1;
-    margin-bottom: 0px;
+    margin-bottom: 7px;
 }
 
 .markdown img {
