--- a/static/templates/message_edit_form.handlebars
+++ b/static/templates/message_edit_form.handlebars
@@ -12,7 +12,7 @@
             <select class='message_edit_topic_propagate' style='display:none;'>
                 <option selected="selected" value="change_one"> {{t "Change only this message topic" }}</option>
                 <option value="change_later"> {{t "Change later messages to this topic" }}</option>
-                <option value="change_all"> {{t "Change previous and following messages to this topic" }}</option>
+                <option value="change_all"> {{t "Change recent messages to this topic" }}</option>
             </select>
         </div>
     </div>
