--- a/static/styles/media.scss
+++ b/static/styles/media.scss
@@ -90,7 +90,7 @@
         padding: 0px;
     }
 
-    .input-append .user-list-filter {
+    #user_search_section .user-list-filter {
         /* input should be 100% - 6px padding x2 - 1px border x2. */
         width: calc(100% - 12px - 2px);
     }
