--- a/templates/zerver/documentation_main.html
+++ b/templates/zerver/documentation_main.html
@@ -22,11 +22,7 @@
 
             <div id="footer" class="documentation-footer">
                 <hr />
-                <p>
-                    We're here to help! Email us at
-                    <a href="mailto:{{ support_email }}">{{ support_email }}</a>
-                    with questions, feedback, or feature requests.
-                </p>
+                <p>We're here to help! Email us at <a href="mailto:{{ support_email }}">{{ support_email }}</a> with questions, feedback, or feature requests.</p>
             </div>
         </div>
     </div>
