--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -141,7 +141,7 @@ li.active-sub-filter {
     padding: 1px 10px;
 }
 
-.left-sidebar li {
+.narrows_panel li {
     padding-top: 2px;
     padding-bottom: 2px;
 
