css: Simplify selector for topic name hovers.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -249,7 +249,7 @@ a.conversation-partners:hover {
     line-height: 1.1;
 }
 
-.left-sidebar li a.topic-name:hover {
+a.topic-name:hover {
     text-decoration: underline;
 }
 
