--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -355,7 +355,7 @@ on a dark background, and don't change the dark labels dark either. */
         text-shadow: none;
     }
 
-    .mention .messagebox {
+    .mention .messagebox-content {
         background-color: hsla(8, 78%, 43%, 0.15);
     }
 
