css: Add a bit of margin to date separator.
This avoids a little glitch where it overlapped
the border.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2661,6 +2661,10 @@ div.topic_edit_spinner .loading_indicator_spinner {
     margin-bottom: 10px;
 }
 
+.date_row {
+    margin-left: 2px;
+}
+
 .date_row .date-direction {
     display: inline-block;
     padding-right: 5px;
