left sidebar: Remove border from starred messages count.
The padding changes move the number a bit to the right and down, towards
where the bottom right corner of an unread count box would have been. This
makes the number look better aligned with the unread count boxes above it.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -196,11 +196,8 @@ a.conversation-partners:hover {
 */
 .top_left_starred_messages .count {
     background-color: transparent;
-    border-width: 1px;
-    border-style: solid;
     color: inherit;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding: 2px 1px 0px 3px;
     border-color: hsl(105, 2%, 50%);
 }
 
