--- a/templates/zerver/emails/digest.source.html
+++ b/templates/zerver/emails/digest.source.html
@@ -1,7 +1,7 @@
 {% extends "zerver/emails/email_base_messages.html" %}
 
 {% block content %}
-    Hello {{ name }},
+    <p>Hello {{ name }},</p>
 
     <p>A lot has happened on Zulip while you've been away! <a href="{{ realm_uri }}">Visit Zulip</a> to catch up.</p>
 
