left_sidebar: Add scrollbar for private messages region.
This fixes a longstanding UI issue when you have way too many recent
private message conversations, as you can now scroll down the list to
find what you're looking for.

Fixes #5384.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -81,12 +81,17 @@
     padding: 2px 0px 2px 29px;
 }
 
+#private-container,
 #stream-filters-container {
     overflow-x: hidden;
     overflow-y: hidden;
     position: relative;
     z-index: 0;
     width: 100%;
+}
+
+#private-container {
+    max-height: 200px;
 }
 
 #global_filters li:hover,
