--- a/puppet/zulip/templates/uwsgi.ini.template.erb
+++ b/puppet/zulip/templates/uwsgi.ini.template.erb
@@ -7,6 +7,7 @@ chmod-socket=700
 chown-socket=zulip:zulip
 processes=<%= @uwsgi_processes %>
 harakiri=20
+buffer-size=8192
 post-buffering=4096
 env= LANG=en_US.UTF-8
 uid=zulip
