--- a/templates/analytics/realm_summary_table.html
+++ b/templates/analytics/realm_summary_table.html
@@ -20,7 +20,7 @@
 </script>
 
 <ul>
-    <li><strong>active (site)</strong> - has ≥4 days in the last week with ≥5 DAUs</li>
+    <li><strong>active (site)</strong> - has ≥5 DAUs</li>
     <li>sites are listed if ≥1 users active in last 2 weeks</li>
     <li><strong>user</strong> - registered user, not deactivated, not a bot</li>
     <li><strong>active (user)</strong> - sent a message, or advanced the pointer (reading messages doesn't count unless advances the pointer)</li>
