Move inline date separators from messagebox to message_row
Fixes border-related glitches introduced by commit
51c6c82003b0428f887bbf3c8d6cf79abc0e333d (#10820).  Alternative
to #11534.

Signed-off-by: Anders Kaseorg <andersk@mit.edu>

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -355,7 +355,7 @@ on a dark background, and don't change the dark labels dark either. */
         text-shadow: none;
     }
 
-    .mention .messagebox-content {
+    .mention .messagebox {
         background-color: hsla(8, 78%, 43%, 0.15);
     }
 
