--- a/static/templates/settings/organization-profile-admin.handlebars
+++ b/static/templates/settings/organization-profile-admin.handlebars
@@ -15,14 +15,14 @@
             <div class="organization-settings-parent">
                 <div class="input-group admin-realm">
                     <label for="id_realm_name">{{t "Organization name" }}</label>
-                    <input type="text" id="id_realm_name" name="realm_name" class="admin-realm-name"
-                      autocomplete="off"
+                    <input type="text" id="id_realm_name" name="realm_name" class="admin-realm-name setting-widget"
+                      autocomplete="off" data-setting-widget-type="text"
                       value="{{ realm_name }}" maxlength="40" />
                 </div>
                 <div class="input-group admin-realm">
                     <label for="realm_description">{{t "Organization description" }}</label>
-                    <textarea id="id_realm_description" name="realm_description" class="admin-realm-description"
-                      maxlength="1000">{{ realm_description }}</textarea>
+                    <textarea id="id_realm_description" name="realm_description" class="admin-realm-description setting-widget"
+                      maxlength="1000" data-setting-widget-type="text">{{ realm_description }}</textarea>
                 </div>
             </div>
         </div>
