--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -132,7 +132,7 @@
             <div class="inline-block organization-settings-parent">
                 <div class="input-group">
                     <label for="realm_default_language" class="dropdown-title">{{t "Default language" }}:</label>
-                    <select name="realm_default_language" id="id_realm_default_language">
+                    <select name="realm_default_language" class ="setting-widget" id="id_realm_default_language" data-setting-widget-type="text">
                         {{#each language_list}}
                         <option value='{{this.code}}'>{{this.name}}</option>
                         {{/each}}
@@ -156,7 +156,7 @@
                     <label for="realm_video_chat_provider" class="dropdown-title">
                         {{t 'Video chat provider' }}
                     </label>
-                    <select name="realm_video_chat_provider" id="id_realm_video_chat_provider">
+                    <select name="realm_video_chat_provider" class ="setting-widget" id="id_realm_video_chat_provider" data-setting-widget-type="text">
                         {{#each realm_available_video_chat_providers}}
                         <option value='{{this}}'>{{this}}</option>
                         {{/each}}
@@ -166,7 +166,8 @@
                         <input type="text" id="id_realm_google_hangouts_domain"
                           name="realm_google_hangouts_domain"
                           autocomplete="off"
-                          class="admin-realm-google-hangouts-domain"/>
+                          class="admin-realm-google-hangouts-domain setting-widget"
+                          data-setting-widget-type="text"/>
                     </div>
                     <div id="zoom_help_text" class="zoom_credentials">
                         <p>
@@ -179,21 +180,24 @@
                         <input type="text" id="id_realm_zoom_user_id"
                           name="realm_zoom_user_id"
                           autocomplete="off"
-                          class="admin-realm-zoom-field"/>
+                          class="admin-realm-zoom-field setting-widget"
+                          data-setting-widget-type="text"/>
                     </div>
                     <div id="zoom_api_key" class="zoom_credentials">
                         <label>{{t 'Zoom API key (required)' }}:</label>
                         <input type="text" id="id_realm_zoom_api_key"
                           name="realm_zoom_api_key"
                           autocomplete="off"
-                          class="admin-realm-zoom-field"/>
+                          class="admin-realm-zoom-field setting-widget"
+                          data-setting-widget-type="text"/>
                     </div>
                     <div id="zoom_api_secret" class="zoom_credentials">
                         <label>{{t 'Zoom API secret (required if changed)' }}:</label>
                         <input type="text" id="id_realm_zoom_api_secret"
                           name="realm_zoom_api_secret"
                           autocomplete="off"
-                          class="admin-realm-zoom-field"/>
+                          class="admin-realm-zoom-field setting-widget"
+                          data-setting-widget-type="text"/>
                     </div>
                 </div>
 
