css: Consolidate some widths in left sidebar.
We now use 10px to the left of major elements in
left sidebar.

And we then explicitly use 19px for the following:

    icons in top left
    indent for (more conversations)
    stream hashtag icons
    stream lock icons

We also kill off 2px of gutter that was caused
by whitespace in the HTML (and was slightly messing
up alignment of names beneath "Private messages").

Finally, we make the topic indent a bit more explicit.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -1,3 +1,7 @@
+$far_left_gutter_size: 10px;
+$left_col_size: 19px;
+$topic_indent: $far_left_gutter_size + $left_col_size + 4px;
+
 #left-sidebar #group-pm-list {
     display: none;
 }
@@ -10,7 +14,11 @@
 .stream-privacy {
     font-size: 15px;
     font-weight: 800;
-    min-width: 17px;
+    min-width: $left_col_size;
+}
+
+.pm_left_col {
+    min-width: $left_col_size;
 }
 
 #stream_filters,
@@ -90,7 +98,10 @@ li.show-more-private-messages a {
 }
 
 #stream_filters li ul.topic-list li {
-    padding: 2px 0px 2px 29px;
+    padding-top: 2px;
+    padding-right: 0px;
+    padding-bottom: 2px;
+    padding-left: $topic_indent;
 }
 
 #private-container,
@@ -139,7 +150,7 @@ li.active-sub-filter {
 
 #global_filters .filter-icon {
     display: inline-block;
-    min-width: 17px;
+    min-width: $left_col_size;
     text-align: center;
 }
 
@@ -147,7 +158,7 @@ li.active-sub-filter {
     position: relative;
     padding-top: 1px;
     padding-bottom: 1px;
-    padding-left: 8px;
+    padding-left: $far_left_gutter_size;
     padding-right: 10px;
 }
 
@@ -345,7 +356,7 @@ ul.filters li.out_of_home_view li.muted_topic {
 #stream_filters .subscription_block {
     padding: 0px;
     margin-right: 25px;
-    margin-left: 10px;
+    margin-left: $far_left_gutter_size;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -398,9 +409,7 @@ li.show-more-private-messages,
 li.expanded_private_message {
     position: relative;
     padding-top: 1px;
-    padding-right: 0px;
     padding-bottom: 1px;
-    padding-left: 0px;
 }
 
 li.expanded_private_message a {
@@ -408,7 +417,7 @@ li.expanded_private_message a {
 }
 
 li.show-more-private-messages {
-    padding-left: 21px;
+    padding-left: $left_col_size;
 }
 
 .show-all-streams a {
@@ -434,7 +443,6 @@ li.show-more-private-messages {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 2px;
-    margin-right: 9px;
     position: relative;
     top: 0px;
 }
@@ -475,7 +483,7 @@ li.show-more-private-messages {
 
 #streams_header {
     margin-right: 0px;
-    padding-left: 10px;
+    padding-left: $far_left_gutter_size;
     cursor: pointer;
 }
 
