--- a/templates/zerver/portico-header-dropdown.html
+++ b/templates/zerver/portico-header-dropdown.html
@@ -7,13 +7,13 @@
         <li>
             <a href="/">
                 <i class="fa fa-home"></i>
-                Go home
+                Home
             </a>
         </li>
         <li class="logout">
             {% include 'zerver/app/logout.html' %}
             <a href="#logout">
-                <i class="fa fa-off"></i>
+                <i class="fa fa-sign-out"></i>
                 Log out
             </a>
         </li>
