--- a/static/templates/message_body.handlebars
+++ b/static/templates/message_body.handlebars
@@ -38,9 +38,7 @@
 
 </div>
 
-{{#unless status_message}}
-<div class="message_content">{{#if use_match_properties}}{{{msg/match_content}}}{{else}}{{{msg/content}}}{{/if}}</div>
-{{/unless}}
+<div class="message_content">{{#unless status_message}}{{#if use_match_properties}}{{{msg/match_content}}}{{else}}{{{msg/content}}}{{/if}}{{/unless}}</div>
 
 {{#if last_edit_timestr}}
     {{#unless include_sender}}
