--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -2,6 +2,14 @@ body.night-mode {
     background-color: hsl(212, 28%, 18%);
     color: hsl(236, 33%, 90%);
 
+    a:hover {
+        color: hsl(200, 79%, 66%);
+    }
+
+    ul.filters a:hover {
+        color: inherit;
+    }
+
     .app-main,
     .header-main,
     #tab_bar_underpadding,
