--- a/static/templates/admin_filter_list.handlebars
+++ b/static/templates/admin_filter_list.handlebars
@@ -7,7 +7,7 @@
         <span class="filter_url_format_string">{{url_format_string}}</span>
     </td>
     {{#if ../can_modify}}
-    <td>
+    <td class="no-select">
         <button class="button small delete btn-danger" data-filter-id="{{id}}">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
         </button>
