--- a/templates/zerver/app/delete_message.html
+++ b/templates/zerver/app/delete_message.html
@@ -6,6 +6,14 @@
     <div class="modal-body">
         <div class="content">
             <p><strong>{{ _("Are you sure you want to delete this message?") }}</strong></p>
+            <p id="delete-message-model-details">
+                <div> <strong>Author:</strong>  <span id="delete-message-model-details-author"></span> </div>
+                <div> <strong>Stream:</strong>  <span id="delete-message-model-details-stream"></span> </div>
+                <div> <strong>Topic:</strong> <span id="delete-message-model-details-topic"></span> </div>
+
+            </p>
+            <p><strong>Please note that this will permanently delete the message </strong> <a href="https://zulipchat.com/help/edit-or-delete-a-message#delete-a-message" target="_blank"><i class="fa fa-question-circle" aria-hidden="true"></i></a></p>
+
         </div>
         <div id="delete-message-error"></div>
     </div>
