--- a/templates/zerver/login.html
+++ b/templates/zerver/login.html
@@ -26,6 +26,17 @@ page can be easily identified in it's respective JavaScript file. -->
                 <div class="description">
                     {{ realm_description|safe }}
                 </div>
+                <!-- TODO: Add if web_public_view enabled -->
+                <div class="login-social">
+                    <form class="social_login_form form-inline" action="/" method="post">
+                        {{ csrf_input }}
+                        <input type="hidden" name="prefers_web_public_view" value="true">
+                        <input type="hidden" name="next" value="{{ next }}">
+                        <button class="login-social-button">
+                            {{ _('Log in anonymously') }}
+                        </button>
+                    </form>
+                </div>
             </div>
             {% endif %}
 
